force-app/main/default/objects/Opportunity/fields/AcjDeskOfficer__c.field-meta.xml
<CustomField>
    <fullName>AcjDeskOfficer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nom de l&#39;assistant contractuel juridique</description>
    <label>Chargé de dossier ACJ</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChildUser</relationshipName>
    <type>Lookup</type>
</CustomField>