force-app/main/default/objects/Opportunity/fields/AdFundedListening__c.field-meta.xml
<CustomField>
    <fullName>AdFundedListening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD-FUNDED</label>
    <type>Checkbox</type>
</CustomField>