force-app/main/default/objects/Opportunity/fields/DeskOfficerBackOffice__c.field-meta.xml
<CustomField>
    <fullName>DeskOfficerBackOffice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chargé de dossier Back Office</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ChildUser2</relationshipName>
    <type>Lookup</type>
</CustomField>