force-app/main/default/objects/Opportunity/fields/ExcludedCountry__c.field-meta.xml
<CustomField>
    <fullName>ExcludedCountry__c</fullName>
    <label>Pays du world exclus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>