force-app/main/default/objects/Opportunity/fields/ExploitationFormat__c.field-meta.xml
<CustomField>
    <fullName>ExploitationFormat__c</fullName>
    <label>Format d&#39;exploitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDEX</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>SIMPLE DSR</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>DIOL</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>To be defined</fullName>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>