force-app/main/default/objects/Opportunity/fields/ExploitationLyrics__c.field-meta.xml
<CustomField>
    <fullName>ExploitationLyrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exploitation de paroles</label>
    <type>Checkbox</type>
</CustomField>