force-app/main/default/objects/Opportunity/fields/FreeToUserTethered__c.field-meta.xml
<CustomField>
    <fullName>FreeToUserTethered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FREE-TO-USER</label>
    <type>Checkbox</type>
</CustomField>