force-app/main/default/objects/Opportunity/fields/GeoBlockingService__c.field-meta.xml
<CustomField>
    <fullName>GeoBlockingService__c</fullName>
    <label>Service géo-bloqué</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>Non</fullName>
                <label>2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>