force-app/main/default/objects/Opportunity/fields/LimitedScope__c.field-meta.xml
<CustomField>
    <fullName>LimitedScope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LIMITED SCOPE</label>
    <type>Checkbox</type>
</CustomField>