force-app/main/default/objects/Opportunity/fields/ListeningAndOrViewingOnDemand__c.field-meta.xml
<CustomField>
    <fullName>ListeningAndOrViewingOnDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listening and / or viewing On demand</label>
    <type>Checkbox</type>
</CustomField>