force-app/main/default/objects/Opportunity/fields/NonInteractiveRadioListeningWebcasting__c.field-meta.xml
<CustomField>
    <fullName>NonInteractiveRadioListeningWebcasting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Noninteractive radiolistening/webcasting</label>
    <type>Checkbox</type>
</CustomField>