force-app/main/default/objects/Opportunity/fields/OtherRemarks__c.field-meta.xml
<CustomField>
    <fullName>OtherRemarks__c</fullName>
    <description>Commentaires et remarques</description>
    <label>Autres remarques</label>
    <type>TextArea</type>
</CustomField>