force-app/main/default/objects/Opportunity/fields/PartnerValidation__c.field-meta.xml
<CustomField>
    <fullName>PartnerValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validée par le partenaire</label>
    <type>Checkbox</type>
</CustomField>