force-app/main/default/objects/Opportunity/fields/PayPerUseNointeractive__c.field-meta.xml
<CustomField>
    <fullName>PayPerUseNointeractive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAY-PER-USE</label>
    <type>Checkbox</type>
</CustomField>