force-app/main/default/objects/Opportunity/fields/PreListeningPreViewingOnDemand__c.field-meta.xml
<CustomField>
    <fullName>PreListeningPreViewingOnDemand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-listening / Pre-viewing on demand</label>
    <type>Checkbox</type>
</CustomField>