force-app/main/default/objects/Opportunity/fields/ReportingDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReportingDueDate__c</fullName>
    <inlineHelpText>En jours</inlineHelpText>
    <label>Date d&#39;exigibilité reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>1</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>3</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>