force-app/main/default/objects/Opportunity/fields/ReportingElement__c.field-meta.xml
<CustomField>
    <fullName>ReportingElement__c</fullName>
    <label>Elément de déclaration</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>