force-app/main/default/objects/Opportunity/fields/RoiAnalysisCompleted__c.field-meta.xml
<CustomField>
    <fullName>RoiAnalysisCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ROI Analysis Completed</label>
    <type>Checkbox</type>
</CustomField>