force-app/main/default/objects/Opportunity/fields/SacemRemuneration__c.field-meta.xml
<CustomField>
    <fullName>SacemRemuneration__c</fullName>
    <description>Montant des droits pour le répertoire SACEM</description>
    <label>Rémunération SACEM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>