force-app/main/default/objects/Opportunity/fields/ServiceName__c.field-meta.xml
<CustomField>
    <fullName>ServiceName__c</fullName>
    <label>Nom du Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>