force-app/main/default/objects/Opportunity/fields/SubscriptionListening__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionListening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SUBSCRIPTION</label>
    <type>Checkbox</type>
</CustomField>