force-app/main/default/objects/Opportunity/fields/TermsPayment__c.field-meta.xml
<CustomField>
    <fullName>TermsPayment__c</fullName>
    <label>Modalités de paiement du forfait</label>
    <type>TextArea</type>
</CustomField>