force-app/main/default/objects/Opportunity/fields/Territory_FX__c.field-meta.xml
<CustomField>
    <fullName>Territory_FX__c</fullName>
    <formula>IF(  World__c = true , &quot;WORLD&quot; ,
IF(  LimitedScope__c = true , &quot;LIMITED SCOPE&quot; ,
IF(  EeaSwitzerland__c = true , &quot;EEA &amp; SWITZERLAND&quot;, 
&quot;Aucun territoire choisi&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Territoire</label>
    <type>Text</type>
</CustomField>