force-app/main/default/objects/Opportunity/fields/UmpiDrmAdvance__c.field-meta.xml
<CustomField>
    <fullName>UmpiDrmAdvance__c</fullName>
    <description>Montant des droits d&#39;exécution publique (DEP) et de reproduction mécanique (DRM) pour le répertoire UMPI</description>
    <label>Avance UMPI DRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>