force-app/main/default/objects/Opportunity/fields/Url__c.field-meta.xml
<CustomField>
    <fullName>Url__c</fullName>
    <label>URL du site</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>