force-app/main/default/objects/Opportunity/recordTypes/KARAOKE.recordType-meta.xml
<RecordType>
    <fullName>KARAOKE</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>KARAOKE</label>
</RecordType>