force-app/main/default/objects/Opportunity/recordTypes/Local.recordType-meta.xml
<RecordType>
    <fullName>Local</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Local</label>
</RecordType>