force-app/main/default/objects/Opportunity/recordTypes/Multi_Territoire.recordType-meta.xml
<RecordType>
    <fullName>Multi_Territoire</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>Multi-Territoire</label>
</RecordType>