force-app/main/default/objects/Opportunity/recordTypes/SLA.recordType-meta.xml
<RecordType>
    <fullName>SLA</fullName>
    <active>true</active>
    <businessProcess>Standard</businessProcess>
    <label>SLA</label>
</RecordType>