force-app/main/default/objects/Opportunity/validationRules/OPP01_CountryScopeLimite_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP01_CountryScopeLimite_Obligatoire</fullName>
    <active>true</active>
    <description>Si le champ Limited Scope est coché alors le champ Pays du Scope limité est obligatoire</description>
    <errorConditionFormula>Not($User.BypassVR__c)&amp;&amp; LimitedScope__c &amp;&amp; ISBLANK(CountryScopeLimite__c  )</errorConditionFormula>
    <errorDisplayField>CountryScopeLimite__c</errorDisplayField>
    <errorMessage>Merci de renseigner les Pays du Scope limité</errorMessage>
</ValidationRule>