force-app/main/default/objects/Opportunity/validationRules/OPP02_ExcludedCountry_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP02_ExcludedCountry_Obligatoire</fullName>
    <active>true</active>
    <description>Si le champ Pays du world exclus est coché ,le CC doit renseigner les Pays du World Exclus</description>
    <errorConditionFormula>Not($User.BypassVR__c)&amp;&amp;  World__c  &amp;&amp; ISBLANK( ExcludedCountry__c  )</errorConditionFormula>
    <errorDisplayField>ExcludedCountry__c</errorDisplayField>
    <errorMessage>Merci de renseigner les Pays du World exclus</errorMessage>
</ValidationRule>