force-app/main/default/objects/Opportunity/validationRules/OPP04_AcjDeskOfficer_Obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP04_AcjDeskOfficer_Obligatoire</fullName>
    <active>true</active>
    <description>Le CC ne doit pas passer à &#39;&#39;Validée&#39;&#39; si l&#39;ACJ n&#39;est pas renseigné</description>
    <errorConditionFormula>Not($User.BypassVR__c)&amp;&amp; ISPICKVAL( StageName ,&#39;Validation Interne&#39;) &amp;&amp;   ISBLANK( AcjDeskOfficer__c )</errorConditionFormula>
    <errorDisplayField>AcjDeskOfficer__c</errorDisplayField>
    <errorMessage>Merci de renseigner L&#39;ACJ lors du passage au statut &quot;Validation Interne&quot;</errorMessage>
</ValidationRule>