force-app/main/default/objects/Opportunity/validationRules/OPP06_AuthorizationEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP06_AuthorizationEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AuthorizationEndDate__c  &lt;  AuthorizationStartDate__c</errorConditionFormula>
    <errorMessage>Merci de renseigner la date de fin de service supérieur à la date de début de service</errorMessage>
</ValidationRule>